# drydoct

./: Cargo.toml  README.md  drydoct.tape  name_plate.txt
src/: app.rs  colors.rs  main.rs  mainmenu.rs  mods.rs  mods_views.rs
