[package]
name = "drydoct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossterm = "0.27.0"
json5 = "0.4.1"
libthermite = { version = "0.6.5", features = ["proton"] }
log = "0.4.20"
once_cell = "1.19.0"
ratatui = { version = "0.24.0", features = ["all-widgets"] }
simple-logging = "2.0.2"
thiserror = "1.0.50"
tui-textarea = "0.4.0"
